# llm-usage

./: .gitignore  README.md  config.yaml  ecosystem.config.cjs  pyproject.toml  start.sh  usage.db
brightness_monitor/: auth.py  brightness.py  config.py  daemon.py  keyboard.py  main.py  providers.py  server.py  speech.py  storage.py  usage.py
llm_usage/: brightness.py  codex_api_provider.py  codex_log_provider.py  config.py  daemon.py  keyboard.py  main.py  providers.py  server.py  speech.py  storage.py  usage.py
