[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brightness-monitor"
version = "0.1.0"
description = "Sync MacBook keyboard brightness to Claude API usage limits"
requires-python = ">=3.10"
dependencies = [
    "pyobjc-core>=10.0",
    "PyYAML>=6.0",
    "prism-shared-python",  # local: pip install -e /path/to/prism-shared-python
]

[project.optional-dependencies]
dev = ["ruff>=0.15", "pre-commit>=4.0"]

[project.scripts]
brightness-monitor = "brightness_monitor.main:main"

# -- ruff (linting + formatting) --

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes - unused imports, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort - import ordering
    "N",      # pep8-naming
    "UP",     # pyupgrade - modernize syntax
    "B",      # flake8-bugbear - common pitfalls
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie - misc lints
    "PT",     # flake8-pytest-style (if tests ever exist)
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking - move imports behind TYPE_CHECKING
    "LOG",    # flake8-logging
    "T201",   # print() statements - use structlog instead
]
ignore = [
    "E501",   # line length handled by formatter
    "UP031",  # we prefer %(name)s style formatting per project convention
    "N806",   # ObjC class lookups produce uppercase locals, that's fine
    "RET504", # unnecessary assignment before return (readability preference)
    "SIM108", # ternary instead of if/else (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["brightness_monitor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
